--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         <a href="/" class="logo">Web<span class="logo-color-footer">Studio</span></a>
         <div class="address">
           <address>
-            <ul>
+            <ul class="address-list">
               <li class="list-item">
                 <a href="https://goo.gl/maps/MNjErT4eSWycqs1J6" class="link">
                   <span class="location-link"> г. Киев, пр-т Леси Украинки, 26 </span></a
